syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.nbs.console.pb";
option java_outer_classname = "RpcNatMessage";


package pb;

service NatTask {

    rpc NatStatus (NatStatusResQuest) returns (NatStatusResponse) {}
}

message NatStatusResQuest{
    string password = 1;
}

message NatStatusResponse{
    string message = 1;
}

