syntax = "proto3";

package net.pb;

enum MsgType {
    Error               = 0;
    NatBootReg          = 1001;
    NatKeepAlive        = 1002;
    NatDigApply         = 1003;
    NatPingPong         = 1004;
    NatDigOut           = 1006;
    NatReversInvite     = 1008;
    NatReversInviteAck  = 1009;
    NatPriDigSyn        = 1010;
    NatPriDigAck        = 1011;
    NatDigConfirm       = 1012;
    NatBootAnswer       = 1013;
    GspInitSub          = 2001;
    GspInitSubACK       = 2002;
    GspProxySub         = 2003;
    GspRegContact       = 2004;
    GspContactAck       = 2005;
    GspForwardSub       = 2006;
    GspSubAck           = 2007;
    GspHeartBeat        = 2008;
}
